--- a/.golangci.yml
+++ b/.golangci.yml
@@ -393,6 +393,10 @@ linters:
 
       # Do not allow non-required aliases.
       no-extra-aliases: true
+      # List of aliases
+      alias:
+        - pkg: "github.com/flexigpt/llmtools-go/spec"
+          alias: llmtoolsgoSpec
 
     nakedret:
       # No naked returns, ever.
