skill prompt refactor, session with activate builtin, list skills better

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,8 +52,7 @@
 		"transform": "camelcase"
 	},
 	"gopls": {
-		"build.directoryFilters": ["-docs", "-scripts"],
-		"build.buildFlags": ["-tags=integration"]
+		"build.directoryFilters": ["-docs", "-scripts"]
 	},
 
 	// --- Markdown ---
