--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,10 +48,10 @@ jobs:
       - name: test
         run: |
           if [[ "${{ matrix.coverage }}" == "true" ]]; then
-            go test -covermode=atomic -coverpkg=./... -coverprofile=coverage.out -tags=integration ./...
+            go test -covermode=atomic -coverpkg=./... -coverprofile=coverage.out ./...
             go tool cover -func=coverage.out
           else
-            go test -tags=integration ./...
+            go test ./...
           fi
 
       - name: check test coverage
